# gofr-agent

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml  services.yml.example
.github/: copilot-instructions.md
app/: __init__.py  config.py  health.py  main_mcp.py  request_context.py  settings.py  transport_security.py
docker/: Dockerfile.cli  Dockerfile.dev  Dockerfile.fixtures  build-all.sh  build-cli.sh  build-dev.sh  build-fixtures.sh  compose.dev.proposal.md  compose.dev.yml  compose.fixtures.yml  entrypoint-dev.sh  fixtures-stack.sh  services.compose.dev.yml
docs/: IMPL_PLAN.md  SPEC.md  agent_health_check_implementation_plan.md  agent_memory_spec_peer_review.md  analytics_bars_dependency_strategy.md  architecture_overview.md  auth_impl_plan.md  auth_mini_spec.md  cli_max_steps_override_strategy.md  compose_dev_connectivity.md  current_state.md  downstream_tool_contract_strategy.md  hub_observability_strategy.md  human_in_the_loop_strategy.md  human_in_the_loop_strategy_peer_review.md  implementation_review.md  master_specification.md  mcp_artifact_handoff_implementation_plan.md  mcp_artifact_handoff_spec.md  mcp_host_allowlist_strategy.md  peer_review.md  prompt_hardening_implementation_plan.md  prompt_hardening_strategy.md  prompt_hardening_test_plan.md  react_integration_guide.md  reasoning_stream_implementation_plan.md  reasoning_stream_sequence_diagram.md  reasoning_stream_spec.md  results_hub_cache_design.md  results_hub_cache_implementation_plan.md  security_model.md  test_mcp_services_impl_plan.md  test_mcp_services_spec.md  test_model_debug_payload_strategy.md
scripts/: ask-docker.sh  check_no_sensitive_files.py  compose-dev-stack.sh  fixture_chat.py  generate_ohlcv.py  run-dev-container.sh  run-dev.sh  run_tests.sh  start-real-server.sh  start-test-mcp-services.sh
(+288 files in other folders)
